# Revelio-main

./: .gitignore  .gitleaksignore  .secretignore  Dockerfile  README.md  mkdocs.yml  package.json  pyproject.toml  requirements.txt
.github/workflows/: check_frontmatter.yml  ci.yml  freshness.yml  preview.yml  rollback.yml  secrets.yml  snake_case.yml  snyk-security.yml  stale.yml
docs/: acronyms.md  extra.css  index.md
docs/Database_Operations/: Home_Page.md
docs/Database_Operations/Enterprise_Architecture_Best_Practices/: Landing_Page.md
docs/Database_Operations/GCP/: GCPOverview.md  GCP_Backup.md  NewGCPProjectOnboarding.md
docs/Database_Operations/Service_Level_Documentation/: CPS.md  Gladiator.md  LoanVantage.md  SvcLevelTemplate.md  Synergy_Express.md
docs/Database_Operations/oncall_static/: oncall.csv
docs/Hosted_Platform_Solutions/: ansible.md  f5.md  foobar.md  index.md  jconnect_subnet.md
docs/Hosted_Platform_Solutions/Kenna_Security/: vulnerability_managment.md
docs/Hosted_Platform_Solutions/RACI_Repository/: RACI_Template.md
docs/Hosted_Platform_Solutions/SMA_Docker/: sma_docker.md
docs/Hosted_Platform_Solutions/splunk/: TCP_traffic_search.md  (+4 more)
docs/Training/: Getting_Started.md
docs/images/: test.drawio
docs/js/: calendar.js
docs/markdown-help/: markdown.md  style.md
docs/network/: BUs.md  CVM.md  index.md  naming.md
presubmits/: check_freshness.py  check_frontmatter.py  check_markdown_updates.py  check_secrets.py  post_frontmatter_comment.py  post_gitleaks_comment.py  post_snake_comment.py  snake_case.py
scripts/: index.sh
(+160 files in other folders)
